--- a/readme
+++ b/readme
@@ -10,6 +10,8 @@ Swing components such as `tfName`, `tfAge`, and `rbMale` are declared as private
 
 The class diagram provides users with a visual representation of the `BMICalculator` class, detailing its private fields, methods, and inheritance from `JFrame`. It effectively outlines the structure, relationships, and responsibilities within the code. This helps illustrate how the application is organized and how components interact.
 
+![Class Diagram](./diagram.png)
+
 ## Four OOP Principles (35%)
 
 ### Abstraction
